Fix reordering enemy lists on mobile, fix styles

--- a/src/styles/enemyitem.scss
+++ b/src/styles/enemyitem.scss
@@ -7,66 +7,74 @@
   left: 0;
   right: 0;
   overflow: scroll;
-  .enemy-item {
-    background: rgba(255,255,255, .4);
-    padding: 10px 20px;
-    display: flex;
-    justify-content: space-between;
-    border-top: 1px solid $mid-purple;
-    position: relative;
-    &.dead {
-      opacity: .7;
-      p {
-        pointer-events: none;
-        text-decoration: line-through;
-        color: $red;
-      }
-    }
-    p {
-      width: 90%;
-      margin: 0;
-      font-size: 20px;
-      line-height: 50px;
-      text-transform: capitalize;
-    }
-    .svg-inline--fa {
-      display: inline-block;
-      margin-right: 5px;
-    }
-    .blinded { color: black; }
-    .bleeding { color: red; }
-    .burning { color: darkorange; }
-    .charmed { color: blueviolet; }
-    .deafened { color: grey; }
-    .exhausted { color: #ca542e; }
-    .frightened { color: #f7cc57; }
-    .incapacitated, .unconscious { color: darkblue; }
-    .invisible { color: white; }
-    .poisoned { color: green; }
-    .paralyzed, .petrified { color: brown; }
-    .restrained { color: maroon; }
-    .stunned { color: cornflowerblue; }
-    .status-effects {
-      position: absolute;
-      bottom: 6px;
-      font-size: 13px;
-      line-height: 15px;
-      pointer-events: none;
-      span {
-        display: inline-block;
-        &:nth-child(n+2) {
-          &::before {
-            content: ', ';
-            color: black
-          }
-        }
-      }
-    }
-  }
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   &.no-enemies {
     text-align: center;
     h3 {
       margin-top: 100px;
+    }
+  }
+}
+
+// moved so it will also style the enemy item that gets pulled into the body when moving around enemies
+.enemy-item {
+  background: rgba(255,255,255, .4);
+  padding: 10px 20px;
+  display: flex;
+  justify-content: space-between;
+  border-top: 1px solid $mid-purple;
+  position: relative;
+  &.dead {
+    opacity: .7;
+    p {
+      pointer-events: none;
+      text-decoration: line-through;
+      color: $red;
+    }
+  }
+  p {
+    width: 90%;
+    margin: 0;
+    font-size: 20px;
+    line-height: 50px;
+    text-transform: capitalize;
+  }
+  .svg-inline--fa {
+    display: inline-block;
+    margin-right: 5px;
+  }
+  .blinded { color: black; }
+  .bleeding { color: red; }
+  .burning { color: darkorange; }
+  .charmed { color: blueviolet; }
+  .deafened { color: grey; }
+  .exhausted { color: #ca542e; }
+  .frightened { color: #f7cc57; }
+  .incapacitated, .unconscious { color: darkblue; }
+  .invisible { color: white; }
+  .poisoned { color: green; }
+  .paralyzed, .petrified { color: brown; }
+  .restrained { color: maroon; }
+  .stunned { color: cornflowerblue; }
+  .status-effects {
+    position: absolute;
+    bottom: 6px;
+    font-size: 13px;
+    line-height: 15px;
+    pointer-events: none;
+    span {
+      display: inline-block;
+      &:nth-child(n+2) {
+        &::before {
+          content: ', ';
+          color: black
+        }
+      }
     }
   }
 }
